Android - list animations, vm test

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TO-DO list GPT-4</string>
+    <string name="list_header_todo">TO-DO</string>
+    <string name="list_header_completed">Completed</string>
 </resources>
